[tool.poetry]
name = "metallb-pool-operator"
version = "0.1.0"
description = ""
authors = ["Will Tekulve <tekulve.will@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
routeros-api = "^0.18.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
ruff = "^0.9.3"
pyright = "^1.1.393"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
