[project]
name = "metallb-pool-operator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "apscheduler>=3.11.0",
  "kubernetes>=32.0.0",
  "pydantic>=2.10.6",
  "routeros-api>=0.18.1",
  "structlog>=25.1.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.393",
 "pytest>=8.3.4",
 "rich>=13.9.4",
 "ruff>=0.9.4",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D100", "D203", "D213", "TD003", "FIX002"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN", "D", "S101"]
